syntax = "proto3";

option csharp_namespace = "Topics.Api";

package topics;

service TopicsProto {
  rpc GetTopicByPermalink (GetTopicByPermalinkRequest) returns (TopicReply);
}

message GetTopicByPermalinkRequest {
  string permalink = 1;
}

message TopicReply {
  
}

message VoidOperationReply {}
